fix topbar covering main section

--- a/styles/main.css
+++ b/styles/main.css
@@ -64,7 +64,7 @@ font-size: 2vh;
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin-top: 300px;
+    margin-top: 35vh;
     margin-bottom: 2em;
 }
 .right-side {
